Delete spaces from url

--- a/src/power_master_src/energy_geoalert_dialog_base.ui
+++ b/src/power_master_src/energy_geoalert_dialog_base.ui
@@ -1106,8 +1106,7 @@ TIF файла:</string>
         </rect>
        </property>
        <property name="text">
-        <string>https://d.tiles.mapbox.com/v4/mapbox.satellite/{z}/{x}/{y}.jpg?access_token=pk.eyJ1Ijoib3BlbnN0cmVldG1hcCIsImEiOiJjaml5MjVyb3MwMWV0M3hxYmUzdGdwbzE4In0.q548FjhsSJzvXsGlPsFxAQ
-        </string>
+        <string>https://d.tiles.mapbox.com/v4/mapbox.satellite/{z}/{x}/{y}.jpg?access_token=pk.eyJ1Ijoib3BlbnN0cmVldG1hcCIsImEiOiJjaml5MjVyb3MwMWV0M3hxYmUzdGdwbzE4In0.q548FjhsSJzvXsGlPsFxAQ</string>
        </property>
       </widget>
       <widget class="QLabel" name="label_17">
